--- a/netflix_home.html
+++ b/netflix_home.html
@@ -48,7 +48,7 @@
     <div class="center_quote">
       <div class="middle_items">
         <div class="unlimited_movies">
-          <h1>Unlimited movies, TV shows and more</h1>
+          <h1>Limited movies, TV shows and more</h1>
         </div>
         <div class="watch_anywhere">
           <p>Watch anywhere. Cancel anytime</p>
