--- a/netflix_home.html
+++ b/netflix_home.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" href="/netflix_home.css" /> -->
     <link rel="stylesheet" href="/Netflix_webpage/netflix_home.css" />
     <script
       src="https://kit.fontawesome.com/3513e8468e.js"
