--- a/netflix_home.html
+++ b/netflix_home.html
@@ -83,7 +83,7 @@
         <div class="video_1">
           <video
             src="/Netflix_webpage/netflix_tv_video.m4v"
-            autoplay
+            autoplay="true"
             loop
           ></video>
         </div>
@@ -139,7 +139,7 @@
           <video
             src="/Netflix_webpage/watch_every_where.m4v"
             width="85%"
-            autoplay
+            autoplay="true"
             loop
           ></video>
         </div>
